Fix the overflow bugs on the login and sign-up

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - lib/assets/signUpImage.jpg
+    - lib/assets/amalLogo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
