--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   otp_text_field: ^1.1.3
   scroll_to_index: ^3.0.1
+  cloud_firestore: ^4.4.5
 
 dev_dependencies:
   flutter_test:
