--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.18.1
   flutter_time_picker_spinner: ^2.0.0
   firebase_auth: ^4.6.1
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
