--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   dynamic_list_item: ^1.2.0
   email_auth: ^1.0.0
   email_otp: ^2.0.1
+  image_picker: ^0.8.7+5
+  shared_preferences: ^2.1.1
 
 
 dev_dependencies:
