--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   email_otp: ^2.0.1
   image_picker: ^0.8.7+5
   shared_preferences: ^2.1.1
+  firebase_storage: ^11.2.1
 
 
 dev_dependencies:
