--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   image_picker: ^0.8.7+5
   shared_preferences: ^2.1.1
   firebase_storage: ^11.2.1
+  firebase_messaging: ^14.6.2
 
 
 dev_dependencies:
